# notification-service

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 7dab9305f281_add_notifications_table.py
docs/api/: openapi.json
docs/schema/: entities.md
scripts/: generate_specs.py
src/: config.py  database.py  dependencies.py  logging_config.py  main.py
src/api/: health.py  router.py
src/api/v1/: notifications.py
src/models/: __init__.py  notification.py
src/repositories/: notification_repository.py
src/schemas/: notification.py
src/services/: notification_service.py  smtp_client.py  template_engine.py
src/templates/: order_confirmation.html
tests/: conftest.py
tests/integration/: test_notifications.py  test_observability.py
